# Sean

HW10/: HW10.kicad_prl  HW10.kicad_pro
HW11/: CMakeLists.txt
HW11/5mp/: 5mp.c  CMakeLists.txt  test.py
HW12/: CMakeLists.txt
HW12/rp2040/: CMakeLists.txt  pwm.c
HW13/: CMakeLists.txt
HW13/imu/: CMakeLists.txt  main.c  mpu6050.c  mpu6050_addr.h  usb_descriptors.c  usb_descriptors.h
HW14/DSP/: python_fir.py  python_mar_iir.py
HW16/: CMakeLists.txt
HW16/DRV8833_H_Bridge/: CMakeLists.txt  main.c
HW2/: CMakeLists.txt
HW2/blink/: CMakeLists.txt
HW3/: CMakeLists.txt
HW3/print/: CMakeLists.txt  print.c
HW4/dac/: dac.c
HW5/: CMakeLists.txt
HW5/I2C/: CMakeLists.txt  I2CMCP23008.c
HW5/dac/: CMakeLists.txt  dac.c
HW6/: CMakeLists.txt
HW6/ssd1306/: CMakeLists.txt  main.c
HW7/: CMakeLists.txt
HW7/cp2102n/: CMakeLists.txt  ssd1306.c  ssd1306.h  uart.c
HW8/: CMakeLists.txt
HW8/rpizerow/: CMakeLists.txt  uart.c
dac/: dac.c
